doc:fix doc with swagger (#8)
* doc(swagger):fix some doc with swagger
